# FundForge

./: README.md  package-lock.json  package.json  tailwind.config.js
app/: InvestmentModal.tsx  globals.css  layout.tsx  page.tsx
app/components/: CompanyCard.tsx  WalletConnection.tsx
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
